<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditAccountUser">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <!-- Perfil imagen -->
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_profile"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="32dp"
                android:background="@android:color/darker_gray"
                android:contentDescription="@string/profile_image"
                android:padding="2dp"
                android:scaleType="centerCrop"
                android:src="@drawable/baseline_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/CircleImageView" />

            <!--<com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_edit_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/edit_profile_image"
                app:fabSize="mini"
                app:layout_constraintBottom_toBottomOf="@id/iv_profile"
                app:layout_constraintEnd_toEndOf="@id/iv_profile"
                app:srcCompat="@drawable/ic_edit" />-->

            <!-- Tarjeta de información de perfil -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_profile_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_profile">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">
                    <!-- Nombre Completo -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_nombre_completo"
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:hint="@string/nombre_completo"
                        app:startIconDrawable="@drawable/ic_person">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_nombre_completo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:text="Jean Paul Quispe" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Teléfono -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_telefono"
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:hint="@string/telefono"
                        app:startIconDrawable="@drawable/baseline_call_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_telefono"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone"
                            android:text="999 299 299" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Correo Electrónico -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_correo"
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:hint="@string/correo_electronico"
                        app:startIconDrawable="@drawable/outline_email_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_correo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:text="ab@gmail.com" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Fecha de Nacimiento -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_nacimiento"
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:hint="@string/nacimiento"
                        app:startIconDrawable="@drawable/ic_calendar">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_nacimiento"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:inputType="none"
                            android:text="17/07/2000" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- DNI (Solo lectura) -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_dni"
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/dni"
                        app:startIconDrawable="@drawable/outline_contact_emergency_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_dni"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:inputType="number"
                            android:text="43612945" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- Botón para guardar cambios -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_guardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:padding="12dp"
                android:text="@string/guardar_cambios"
                app:cornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_profile_info" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <!-- Barra de navegación inferior similar a la imagen -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@android:color/white"
        app:menu="@menu/bottom_menu_user" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
